# dagster-hex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg
.circleci/: config.yml
dagster_hex/: consts.py  ops.py  resources.py  types.py
example_job/: example_hex.py
tests/: test_hex.py
