[metadata]
name = dagster-hex
url = https://github.com/hex-inc/dagster-hex
version = file: VERSION.txt
author = Pedram Navid
author_email = pedram@pedramnavid.com
description = Dagster library for Hex
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
project_urls =
    Source Code=https://github.com/hex-inc/dagster-hex
    Homepage=https://github.com/hex-inc/dagster-hex
    Changelog=https://github.com/hex-inc/dagster-hex/blob/main/CHANGELOG.md

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = true
install_requires =
    dagster>=1.0
    dagit
    requests>=2
zip_safe = false

[options.extras_require]
dev =
    mypy>=0.8
    pytest
    pre-commit
    flake8
    isort
    types-requests
    black
    pytest-mock
    requests-mock

[options.packages.find]
include =
    dagster_hex*

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 88

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
namespace_packages = True
explicit_package_bases = True
pretty = True
show_error_codes = True
no_implicit_optional = True
warn_redundant_casts = True
show_error_context = True
color_output = True

[mypy-airflow.*]
ignore_missing_imports = True

[tool.black]
line-length = 88
target-version = ['py39']
